Add feature in notebooks to clone voice, using file text input

--- a/notebooks/Tutorial_3_TTS.ipynb
+++ b/notebooks/Tutorial_3_TTS.ipynb
@@ -127,6 +127,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "63ab9db0",
+   "metadata": {},
+   "source": [
+    "--text \" abc Hello everyone and welcome back to the Horror Hut. Now, I know late that night \" \\\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e54f1b13-560c-4fed-bafd-e38ec9712359",
@@ -140,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "6dac1912-5054-4a68-8357-6d20fd99cb10",
    "metadata": {},
    "outputs": [
@@ -258,11 +266,13 @@
       " | > base:10\n",
       " | > hop_length:160\n",
       " | > win_length:400\n",
-      " > Text: Win win Hello Asian, Are we not allowed to dim the lights so people can see that a bit better?\n",
+      " > Text: Hello everyone and welcome back to the Horror Hut. \n",
+      "\n",
+      "Now, I know a lot of you use these videos to sleep, so before you drift off, I thought it would be a fun idea if everyone could leave a comment to let me know where you are listening from in the world.  \n",
       " > Text splitted to sentences.\n",
-      "['Win win Hello Asian, Are we not allowed to dim the lights so people can see that a bit better?']\n",
-      " > Processing time: 2.4858226776123047\n",
-      " > Real-time factor: 0.36898065572395794\n",
+      "['Hello everyone and welcome back to the Horror Hut.', 'Now, I know a lot of you use these videos to sleep, so before you drift off, I thought it would be a fun idea if everyone could leave a comment to let me know where you are listening from in the world.']\n",
+      " > Processing time: 3.8992350101470947\n",
+      " > Real-time factor: 0.23206969468795946\n",
       " > Saving output to tts_output.wav\n"
      ]
     }
@@ -272,7 +282,7 @@
     "--encoder_path model_se.pth.tar \\\n",
     "--encoder_config config_se.json \\\n",
     "--speaker_wav 0814.wav \\\n",
-    "--text \"Win win Hello Asian, Are we not allowed to dim the lights so people can see that a bit better?\"\\\n",
+    "--text \"$(cat input.txt)\" \\\n",
     "##--out_path spkr-out.wav \\\n",
     "--language_idx \"en\" \\\n",
     "--out_path outtest.wav \n"
